<resources>
    <string name="pep_in_plan_10k_1">אימון ריצה ראשון מאחורייך.\nאת ממש רצת 4 דקות, מדהים. </string>
    <string name="pep_in_plan_10k_2">ברכות! רצת 4 דקות.\nאת כבר מרגישה שזה אפשרי?</string>
    <string name="pep_in_plan_10k_3">מדהים לראות שלמרות הקושי יצאת שוב לריצה.\nשבוע ראשון מאחורייך.\nאת הולכת ליהנות בשבוע הבא.</string>
    <string name="pep_in_plan_10k_4">הכפלת את זמן הריצה.\nהקושי הוא אותו הקושי, אבל המרחק כפול.\nכל הכבוד!</string>
    <string name="pep_in_plan_10k_5">אם הצלחת באמת לרוץ בקצב דיבור,\nהאימון היה אפילו קל יותר מהפעם הקודמת.</string>
    <string name="pep_in_plan_10k_6">אם היה לך קשה, תדעי שפעם הבאה הולך להיות לך קל יותר.</string>
    <string name="pep_in_plan_10k_7">התקדמנו רק מעט,\nועדיין - 3 דקות בריצה זה לא פשוט! ניצחת!</string>
    <string name="pep_in_plan_10k_8">כל הכבוד לך, אלופה!\nאת מתקדמת בדיוק כמו שצריך.</string>
    <string name="pep_in_plan_10k_9">נהדרת!\nלכי לאכול מנת חלבון ולשתות 2 כוסות מים.\nכבוד על האימון!</string>
    <string name="pep_in_plan_10k_10">איך את עם הספרינטים?\nאת לא חייבת לאהוב אותם, אבל תדעי שהם מאפשרים לך את ההתקדמות לקראת הצעד הבא.</string>
    <string name="pep_in_plan_10k_11">10אלופה אחת!</string>
    <string name="pep_in_plan_10k_12">את נמצאת כבר בתוך התהליך לגילוי היכולות החבויות בך. זה תהליך מעצים ומרתק. תיהני!</string>
    <string name="pep_in_plan_10k_13">אם הרגשת שיכולת יותר, נהדר.\nאם היה לך קשה, אנחנו נשארות כאן עוד קצת. תמשיכי להתחזק. כבוד!</string>
    <string name="pep_in_plan_10k_14">כל הכבוד, יקירה, על ההצלחות שלך - גם כשקשה.</string>
    <string name="pep_in_plan_10k_15">את ממש צעד לפני ריצה ארוכה. כל הכבוד על היכולת לרוץ זמן ממושך במחשבות טובות</string>
    <string name="pep_in_plan_10k_16">אלופה!</string>
    <string name="pep_in_plan_10k_17">כמה מרגש! שני הקילומטרים הראשונים שלך כבר ממש מעבר לפינה</string>
    <string name="pep_in_plan_10k_18">איזו אליפות! את כבר תרגישי שריצה ממושכת קלה יותר מאשר זו עם הפסקות הליכה.</string>
    <string name="pep_in_plan_10k_19">ייאאאיייי!!!! איזו אדירה. כל הכבוד לך על הניצחון שלך!</string>
    <string name="pep_in_plan_10k_20">נהדרת, אדירה. ניצחת שיצאת. ניצחת שרצת. את מנצחת!</string>
    <string name="pep_in_plan_10k_21">זה כל כך משמח להתחיל אימון וצ\'יק צ\'אק לסיים. והעיקר, את פשוט רצה!!!</string>
    <string name="pep_in_plan_10k_22">אימון לא פשוט שדורש התאוששות מלאה. אני מקווה מאוד שאת כבר עם נעלי ריצה שמותאמות לך. </string>
    <string name="pep_in_plan_10k_23">לפעמים דווקא ריצה אחרי אימון איכות, כמו האימון הקודם, מאתגרת יותר. זה בסדר. אל תיבהלי אם היה לך לא פשוט. אימון הוא תמיד צעד אחורה בשביל שניים קדימה.</string>
    <string name="pep_in_plan_10k_24">ממש כמו בטיפוס על הר - תהליך, זה מה שחשוב ואת על השביל הנכון. כל הכבוד!</string>
    <string name="pep_in_plan_10k_25">עוד רגע הקושי יהיה רק בהתחלה. כרגע תשמחי מזה שבכל יציאה מהבית:\nאת כובשת!</string>
    <string name="pep_in_plan_10k_26">עשית את זה שוב. תקשיבי לכל כאב שהגוף שלך מספר לך. אם את עדיין בלי נעלי ריצה, אל תדחי יותר את רכישתם.</string>
    <string name="pep_in_plan_10k_27">כל הכבוד. לכי תתפנקי עם משקה קר ומרענן.</string>
    <string name="pep_in_plan_10k_28">ייישש!!! עשית את זה. הניצחון הוא שלך.</string>
    <string name="pep_in_plan_10k_29">יצאת. רצת. ניצחת.</string>
    <string name="pep_in_plan_10k_30">אני בטוחה שאת חוזרת עכשיו לחייך, עם כוחות אחרים.</string>
    <string name="pep_in_plan_10k_31">20 דקות ראשונות. זה הקושי. עברת אותם, קנית את עולמך!!!</string>
    <string name="pep_in_plan_10k_32">כל הכבוד לך! שוב חצית את רף ה-20 דקות. מי שרצה 20 דקות ויותר, אין אתגר שהיא לא תוכל לו!</string>
    <string name="pep_in_plan_10k_33">איך את? מרגישה את השינויים שהגוף והנפש שלך עוברים בתוך התהליך הזה? </string>
    <string name="pep_in_plan_10k_34">זה כבר לא 4 דקות. זה ארבעה קילומטרים רצופים בריצה. מה זה אומר עלייך? שאת פשוט לא מוותרת לעצמך על עצמך, וזה שווה הכול.</string>
    <string name="pep_in_plan_10k_35">כל ריצה מאתגרת מביאה אחריה ריצה משוחררת יותר. ככה זה בחיים, עוברים אתגר והצעד הבא קליל יותר. בהצלחה לך.</string>
    <string name="pep_in_plan_10k_36">הזמן שלך לעצמך, לגוף שלך, לבריאות שלך, לנפש שלך. זה מה שעושה אותך כל כך טובה לכל הסביבה שלך. המשיכי כך.</string>
    <string name="pep_in_plan_10k_37">הגעת לאתגר אמיתי.\nתאמיני בעצמך. קחי כוחות ותזכרי שברגע שעברת חומה, את יכולה להסתכל עליה כמו על אתגר שעמדת בו.</string>
    <string name="pep_in_plan_10k_38">זה לא סתם ניצחון.\nחמישה קילומטרים הם אתגר אמיתי. תחשבי חיובי. את נמצאת בשביל המוליך למשהו טוב הרבה יותר.</string>
    <string name="pep_in_plan_10k_39">את זוכרת שמי שרצה 20 דקות יכולה לנצח כל אתגר?! זו את!</string>
    <string name="pep_in_plan_10k_40">לא פשוט, אין לי ספק, אבל זה מאחורייך - ועשית את זה בהצלחה. את בשביל המוביל אל הטוב. את בכושר גבוה יותר. בריאה יותר ומסוגלת תמיד להרבה יותר. תזכרי את זה.</string>
    <string name="pep_in_plan_10k_41">כל ריצה היא ניצחון. כל ריצה היא עוד צעד לקראת ההצלחה הבאה. תהיי גאה בך. אני גאה בך!</string>
    <string name="pep_in_plan_10k_42">ריצה היא הרבה מעבר לריצה - והיכולת הגופנית שלך משקפת כמה הנפש שלך חזקה.</string>
    <string name="pep_in_plan_10k_43">צעד אחד קדימה מחמישה קילומטרים, זה לשבור חומה. תמשיכי עם כל הקושי. זה יהיה קל יותר בפעם הבאה, מבטיחה.</string>
    <string name="pep_in_plan_10k_44">והנה את עוד צעד קדימה מ\'משבר חמשת הקילומטרים\'. זה טבעי ונורמלי אבל את ממשיכה בדרך קדימה עם כל הקושי והרעש שמסביב. אני איתך.</string>
    <string name="pep_in_plan_10k_45">אני בטוחה שאת גאה בעצמך - עשית את זה, שוב!</string>
    <string name="pep_in_plan_10k_46">לנקות את הראש, לחזור לחיים בריאה יותר, שמחה יותר, אנרגטית יותר ובעיקר בעיקר - אישה חזקה יותר. זו את!</string>
    <string name="pep_in_plan_10k_47">לכי לשמוח. ניצחת שוב!</string>
    <string name="pep_in_plan_10k_48">רמת הכושר הגופני והיכולת האירובית שלך השתפרו פלאים. שימי לב שגם ביום-יום מטלות שבדרך כלל אתגרו אותך מבחינה של סיבולת - היום את עושה אותן בקלות רבה יותר. זו את וההתמדה שלך.</string>
    <string name="pep_in_plan_10k_49">לחרוש בעלייה זה כמו לקחת את המשימות הכי מבאסות ביום-יום ולהסתער עליהן. אז אחרי שרצת בעליות, על מה את מסתערת?</string>
    <string name="pep_in_plan_10k_50">זוכרת שאמרתי לך שחמישה קילומטרים הם תמיד אתגר? ועדיין, כשאת עושה אותם בתוך התהליך, את מבינה שוב ושוב כמה הכול קטן עלייך.</string>
    <string name="pep_in_plan_10k_51">זמן ריצה הוא זמן למדיטציה לנפש: לסדר את המחשבות. אם את עדיין עסוקה בנשימות וברצון לסיים עם זה כבר, רוצי עם מוזיקה או עם חברה טובה.</string>
    <string name="pep_in_plan_10k_52">איזו אלופה! כמה קשה - ככה שווה. לכי לאכול משהו חלבוני ונחמד ולשמוח על ההישג האדיר שלך.</string>
    <string name="pep_in_plan_10k_53">שום ריצה לא קלה. כל ריצה היא ניצחון, גם אם מדובר במרחק שאת כבר מכירה.</string>
    <string name="pep_in_plan_10k_54">תסתכלי על עצמך. ככה נראית אישה ווינרית.</string>
    <string name="pep_in_plan_10k_55">לא פשוט, אני יודעת, עוד צעד משמעותי בהר המרגש שאת כובשת עכשיו.</string>
    <string name="pep_in_plan_10k_56">היה קשה לצאת, היה קשה לרוץ, וזה כל הניצחון. ריצה היא לא תמיד מהנה, אבל הסיפוק שבסיום פשוט שווה הכול!</string>
    <string name="pep_in_plan_10k_57">עמידה באתגרים - גם כשהדרך ארוכה, והידיעה שאת פשוט יכולה - זה הניצחון.</string>
    <string name="pep_in_plan_10k_58">תמיד, כדי להתקדם בחיים - אנחנו חייבות להציב לעצמנו אתגר. הרי החדשות: עברת אותו!</string>
    <string name="pep_in_plan_10k_59">שוב שיחקת אותה בשמינייה של ניקוי ראש. אני יכולה רק לבקש ממך שתיקחי את התחושה הזו שאת חווה עכשיו, שאת בלתי מנוצחת, ותיישמי אותה בכל אתגר בחייך. מגיע לך להמשיך להצליח.</string>
    <string name="pep_in_plan_10k_60">גם אם זה נראה לך \'בקטנה\', תזכרי תמיד שכל ריצה היא ניצחון. ואת - מגיע לך את כתר המלכה.</string>
    <string name="pep_in_plan_10k_61">עשית את זה. כבשת בזכותך בלבד מרחק חדש וארוך. תשעה קילומטרים זה כבר בהחלט סיפור הצלחה. כבוד ענק!</string>
    <string name="pep_in_plan_10k_62">כל ריצה היא ניצחון. כל ריצה היא עוד צעד לקראת ההצלחה הבאה. תהיי גאה בך. אני גאה בך!</string>
    <string name="pep_in_plan_10k_63">כמה שקשה לצאת - ככה מספק וממלא לסיים ולדעת ששוב א ת הצלחת. את. בכוחך!</string>
    <string name="pep_in_plan_10k_64">ריצה מגניבה ומאתגרת שהביאה אותך לעוד צעד משמעותי לכיוון היעד - עשרה קילומטרים בריצה רצופה. אחרי שצלחת אותו, אני בטוחה שאת כבר מבינה שריצה של עשרה קילומטר זה רק עניין של זמן.</string>
    <string name="pep_in_plan_10k_65">ושוב זו את. בכל מרחק (!) את המנצחת!</string>
    <string name="pep_in_plan_10k_66">האמת היא שהאתגר הכי גדול הוא בהתמודדות מול השדים שבנפש. כשקשה - תחשבי תמיד על הסיפוק האדיר שמחכה לך עוד חצי שעה-שעה, וכמה הוא ישפיע על היום שלך ועל כל השבוע...</string>
    <string name="pep_in_plan_10k_67">אימון הכנה מדהים ומאתגר שצלחת בתוך השביל שאת סללת בכוחך.</string>
    <string name="pep_in_plan_10k_68">זה ארוך וזה מטורף, אבל בעיקר - זה הניצחון שלך והזמן החשוב שהענקת לעצמך באהבה.\nמגיע לך! </string>
    <string name="pep_in_plan_10k_69">עברת מסע משנה חיים. את מוכנה לכבוש את היעד המרגש ביותר ו...להירשם למרוץ.</string>
    <string name="pep_in_plan_10k_70">אלופה אחת! הגעת ל-10 ק״מ, הירשמי למרוצים, השתתפי בריצות החודשיות של בגוף בריא, והכי חשוב, אל תפסיקי לרוץ בין חצי שעה ל-45 דקות, 3 פעמים בשבוע לפחות.</string>
    <string name="place_in_plan_10k_0">ברוכה הבאה לתוכנית האימונים הכי שווה</string>
    <string name="place_in_plan_10k_1">את רצה כבר 4 דקות</string>
    <string name="place_in_plan_10k_2">את רצה 4 דקות</string>
    <string name="place_in_plan_10k_3">שבוע ראשון מאחורייך</string>
    <string name="place_in_plan_10k_4">8 דקות ריצה</string>
    <string name="place_in_plan_10k_5">את רצה 8 דקות</string>
    <string name="place_in_plan_10k_6">שבוע שני מאחורייך</string>
    <string name="email_heb">דוא״ל</string>
    <string name="menu_help_heb">עזרה</string>
    <string name="menu_share_heb">שיתוף</string>
    <string name="menu_tips_heb">טיפים והמלצות</string>
    <string name="menu_personal_data_heb">עדכון פרטים</string>
    <string name="menu_main_heb">מסך ראשי</string>
    <string name="first_set_post_run_excersize_heb">תרגילי חיזוק</string>
    <string name="send_feedback_heb">שלחי משוב</string>
    <string name="to_pulls_excercise_heb">תרגילי מתיחות</string>
    <string name="cancelation_heb">ביטול</string>
    <string name="menu_time_of_reminders_heb">מועדי אימון ותזכורות</string>
    <string name="menu_about_us_heb">אודות</string>
    <string name="i_finished_the_training_heb">סיימתי את האימון</string>
    <string name="bold">bold</string>
    <string name="menu_agreement_heb">תנאי השימוש</string>
    <string name="menu_questions_heb">שאלות נפוצות</string>
    <string name="about_sentence1_heb">ברוכה הבאה לאפליקציית הריצה של \"בגוף בריא עם מירי פורסט\"</string>
    <string name="about_sentence2_heb">אם בחרת להוריד את האפליקציה סימן שאת רצינית ורוצה לקחת את עצמך בידיים. אז הנה, בשביל זה אני כאן, ללוות אותך כדי שתוכלי להגיע רחוק-רחוק.</string>
    <string name="about_sentence3_heb">במיוחד בשבילך הכנתי תוכנית מושקעת ביותר לריצה מ-0 ל-10 ק\"מ.</string>
    <string name="about_sentence4_heb">וכן,</string>
    <string name="about_sentence5_heb">כל אחת יכולה!</string>
    <string name="about_sentence6_heb">אני מזמינה אותך להתנסות באפליקציה החינמית,</string>
    <string name="about_sentence7_heb">לקבל שיעור ראשון ללא  עלות – </string>
    <string name="about_sentence8_heb">לראות כי טוב ולהצטרף לתוכנית המלאה.</string>
    <string name="about_sentence9_heb">ההשקעה שלך בעצמך: 10 שקלים בלבד לאימון.</string>
    <string name="about_sentence10_heb">גרסת הפרימיום כוללת:</string>
    <string name="about_sentence11_heb">תוכנית אימונים בליווי קולי אישי שלי, סרטונים של תרגילי חימום לפני תחילת האימון, סרטונים לתרגילי חיזוק ומתיחות ברמת קושי עולה בסוף האימון, וכמובן, הליווי הקולי תוך כדי תנועה עם הסברים על נשימה נכונה בזמן הריצה, תנועה מדויקת והחזקת הגוף באופן אופטימלי ועוד- לאורך כל 70 השיעורים.</string>
    <string name="about_sentence13_heb">וזה לא הכול. שימי לב לטבלה הבאה:</string>
    <string name="about_sentence12_heb">בתחילת כל אימון תשמעי ממני הסבר על האימון הצפוי לך.</string>
    <string name="about_sentence14_heb">נראה טוב, נכון?</string>
    <string name="retrive_password_heb">שיחזור סיסמה</string>
    <string name="menu_settings_heb">הגדרות</string>
</resources>