<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="150dip"
    android:background="@drawable/dialog_rounded_corners_white"
    android:layoutDirection="rtl">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:layoutDirection="rtl">

        <com.forst.miri.runwithme.widges.TextViewCustomFont
            android:id="@+id/retrive_password_dialog_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_1_5"
            android:textColor="@color/colorWhite"
            android:text="@string/retrive_password_heb"
            android:background="@drawable/title_rounded_corners_dark_pink"
            android:layout_centerInParent="true"
            android:layout_weight="0.1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_num_2"
            android:gravity="center"
            android:layout_gravity="center">

            <com.forst.miri.runwithme.widges.TextViewCustomFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="right"
                android:text="@string/email_heb"
                android:textColor="@color/colorDarkPink" />

            <EditText
                android:id="@+id/et_retrive_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="right"
                android:inputType="textEmailAddress" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_num_2"
            android:layout_gravity="center">

            <com.forst.miri.runwithme.widges.ButtonCustomFont
                android:id="@+id/retrive_password_button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorTransparent"
                android:textColor="@color/colorDefaultButtonColor"
                android:text="@string/cancelation_heb" />

            <com.forst.miri.runwithme.widges.ButtonCustomFont
                android:id="@+id/retrive_password_button_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/colorTransparent"
                android:textColor="@color/colorDefaultButtonColor"
                android:text="@string/retrive_password_heb" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>







